WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173481
Include a few widespread WTF headers in WebCorePrefix.h
https://bugs.webkit.org/show_bug.cgi?id=173481
Summary
Include a few widespread WTF headers in WebCorePrefix.h
Tim Horton
Reported
2017-06-16 11:14:11 PDT
Include a few widespread WTF headers in WebCorePrefix.h
Attachments
Patch
(1.59 KB, patch)
2017-06-16 11:14 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(1.77 KB, patch)
2017-10-03 12:56 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-06-16 11:14:19 PDT
Created
attachment 313094
[details]
Patch
Build Bot
Comment 2
2017-06-16 11:16:26 PDT
Attachment 313094
[details]
did not pass style-queue: ERROR: Source/WebCore/WebCorePrefix.h:167: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3
2017-06-16 12:45:01 PDT
https://trac.webkit.org/changeset/218402/webkit
Tim Horton
Comment 4
2017-06-16 12:52:23 PDT
Build fix in
https://trac.webkit.org/changeset/218404/webkit
WebKit Commit Bot
Comment 5
2017-06-16 13:44:49 PDT
Re-opened since this is blocked by
bug 173494
Tim Horton
Comment 6
2017-06-17 01:22:14 PDT
Ooh! I can reproduce the build failure by building with dSYMs enabled: ./Tools/Scripts/build-webkit --release ARCHS=x86_64 DEBUG_INFORMATION_FORMAT=dwarf-with-dsym /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/dsymutil /Build/Release/WebCore.framework/Versions/A/WebCore -o /Build/Release/WebCore.framework.dSYM LLVM ERROR: IO failure on output stream. Command /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/dsymutil failed with exit code 1
Tim Horton
Comment 7
2017-06-17 03:03:03 PDT
Adding WTFString or Optional by themselves seems to have the same effect
Tim Horton
Comment 8
2017-06-17 03:20:28 PDT
Ditto for StdLibExtras...
Simon Fraser (smfr)
Comment 9
2017-06-17 10:13:26 PDT
How big is the dSYM file before your changes?
Tim Horton
Comment 10
2017-06-17 11:06:52 PDT
1.4GB
Tim Horton
Comment 11
2017-06-17 17:12:38 PDT
It's not about size. I've reduced it down and can reproduce even by just adding: namespace WTF { } to the same spot
Tim Horton
Comment 12
2017-06-20 00:14:32 PDT
I filed
https://bugs.llvm.org/show_bug.cgi?id=33520
Tim Horton
Comment 13
2017-10-02 22:03:47 PDT
<
rdar://problem/34784096
>
Tim Horton
Comment 14
2017-10-03 12:56:44 PDT
Created
attachment 322568
[details]
Patch
WebKit Commit Bot
Comment 15
2017-10-03 14:12:42 PDT
Comment on
attachment 322568
[details]
Patch Clearing flags on attachment: 322568 Committed
r222810
: <
http://trac.webkit.org/changeset/222810
>
WebKit Commit Bot
Comment 16
2017-10-03 14:12:43 PDT
All reviewed patches have been landed. Closing bug.
Matt Lewis
Comment 17
2017-10-03 14:46:53 PDT
This broke the windows build:
https://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/4908
error: c:\cygwin\home\buildbot\slave\win-release\build\source\webcore\WebCorePrefix.h(171): fatal error C1083: Cannot open type library file: 'c:\cygwin\home\buildbot\slave\win-release\build\webkitbuild\release\derivedsources\forwardingheaders\wtf\fastmalloc.h': Error loading type library/DLL. [C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj]
Tim Horton
Comment 18
2017-10-03 20:16:21 PDT
On our build bots, this looks like a ~6-7% win, not 9%, but still a decent win. We should do something similar in WebKit and JSC, probably.
Tim Horton
Comment 19
2017-10-03 20:17:00 PDT
(In reply to Tim Horton from
comment #18
)
> On our build bots, this looks like a ~6-7% win, not 9%, but still a decent > win. We should do something similar in WebKit and JSC, probably.
6-7% on WebCore alone, less if you measure the whole project :(
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug